--- a/Project-ballons/SASS/abstracts/_mixins.sass
+++ b/Project-ballons/SASS/abstracts/_mixins.sass
@@ -9,3 +9,10 @@
         content: ""
         display: table
         clear: both
+ 
+@mixin respond($breakpoint)
+    @if $breakpoint == phone
+        @media (max-width: 600px)
+            @content
+            
+    
