--- a/Project-ballons/SASS/base/_base.sass
+++ b/Project-ballons/SASS/base/_base.sass
@@ -5,6 +5,11 @@
 
 html
     font-size: 62.5%
+    @include respond(phone)
+        font-size: 45px
+        
+
+                
 
 body
     padding: 5rem
